Thu Jun 23 15:00:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Cornucopia/Cornucopia.doxygen:
          Disable html help, seems doxygen now disables the search option
          when html help is enabled

Thu Jun 23 12:39:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Disable html help, seems doxygen now disables the search option
          when html help is enabled

Thu Jun 23 13:46:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.0.3 released.

Mon Jun 20 15:38:24 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/DevGuideExamples/Messenger/Administrator_exec_i.h:
        * examples/DevGuideExamples/Messenger/History_exec_i.cpp:
        * examples/DevGuideExamples/Messenger/Messenger.mpc:
        * examples/DevGuideExamples/Messenger/Messenger_exec_i.h:
        * examples/DevGuideExamples/Messenger/Messenger_exec_i.cpp:
        * examples/DevGuideExamples/Messenger/Receiver_exec_i.h:
        * examples/DevGuideExamples/Messenger/descriptors/run_test.pl:
          Some cleanup and simplifications but this example doesn't deploy yet

Mon Jun 20 13:58:32 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp:
          Fixed coverity errors

Mon Jun 20 08:02:38 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/TestCoverage.ods:
          Updated.

        * connectors/dds4ccm/tests/Derived/Derived.idl:
        * connectors/dds4ccm/tests/Derived/Derived_Connector.idl:
        * connectors/dds4ccm/tests/Derived/Derived_Connector.mpc:
          Code alignment. Corrected some incorrect names.

        * connectors/dds4ccm/tests/MultipleTemp/Connector/MultipleTemp_Connector_T.h:
          Code alignment.
