@@ -1,3 +1,10 @@
+Wed Jun 29 14:03:36 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * MPC/config/dds4ccm_impl.mpb:
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
+          Extended OpenDDS support
+
 Thu Jun 23 15:00:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/Cornucopia/Cornucopia.doxygen:
